# brainer

./: .gitignore  .gitmodules  .prettierignore  README.md  package.json  tsconfig.json
.github/workflows/: release.yml
native/: CMakeLists.txt
native/src/: addon.cpp  llama_context.cpp  llama_context.h  llama_embedder.cpp  llama_embedder.h  llama_model.cpp  llama_model.h
scripts/: install.sh  release.sh
src/: constants.ts  paths.ts
src/cli/: config-menu.tsx  index.ts
src/cli/commands/: config.ts  ingest.ts  model.ts  space.ts
src/cli/tui/: form-render.tsx  hooks.ts  primitives.tsx  types.ts
src/cli/tui/chat/: ChatApp.tsx  InputArea.tsx  StatusBar.tsx
src/cli/tui/screens/: commands.tsx  config-json.tsx  main.tsx  models.tsx  providers.tsx  spaces.tsx
src/cli/utils/: chat-session.ts  confirm.ts  file-picker.ts  format.ts  launch.ts  lifecycle.ts  progress.tsx  spinner.ts  text.ts
src/core/: hub.ts  models.ts  prompts.ts  sync.ts
src/core/config/: index.ts  io.ts  migrate.ts  schema.ts
src/core/rag/: chunker.ts  ingest.ts  query.ts  store.ts
src/core/spaces/: chat.ts  index.ts  lifecycle.ts  memory.ts  store.ts
src/native/: hub.ts  index.ts  types.ts
src/providers/: headers.ts  index.ts  local.ts  registry.ts  remote.ts  types.ts
